          Important Note: all users must use port 587 for sending email, port
          25 doesn't accept submitted mail by authenticated users anymore.
        - New SQL table `amavisd.outbound_wblist`, used to store whitelists
          and blacklists for outbound messages. It's required by iRedAPD
          plugin 'amavisd_wblist'.

    * Fixed issues:
        - Incorrect quota warning priorities in Dovecot.
          Thanks Peter <rs _at_ samplezone.ch> for the feedback.
        - Incorrect Amavisd setting to sign DKIM on inbound messages.
        - [RHEL/CentOS] Cannot start uwsgi service with 'daemonize' setting in
          /etc/uwsgi.ini.
        - Not preserve the case of ${extension} while delivering message to
          mailbox.

    * Updated packages:
        + Roundcube webmail -> 1.1.2.
        + uwsgi -> 2.0.11.1 (OpenBSD only)
        + FreeBSD ports:
            - lang/php56

iRedMail-0.9.2:
    * SOGo now works on Debian 8.
    * Improvements:
        - LMTP (port 24) and managesieve (port 4190) services are now listening
          on only localhost (127.0.0,1 and ::1) by default.
        - Improve Fail2ban filter `postfix.iredmail.conf` to prevent DoS
          attack to SMTP service.

    * Fixed issues:
        - Cannot create required SQL tables in `vmail` database with PostgreSQL
          backend.
        - catch-all support doesn't work with user+extension@domain.com.
          Thanks to stevekez <iredmail@stevekerrison.com> for the contribution
          in iRedMail support forum.
        - uwsgi service doesn't work on RHEL/CentOS. A new version of uwsgi
          package was submitted to EPEL repo with higher priority (not
          submitted by iRedMail team), it's not compatible with settings
          configured by iRedMail, this causes uwsgi service cannot be started.
        - Cannot import MySQL database on Jailed FreeBSD.
        - Not install required port 'databases/py-sqlalchemy' on FreeBSD.