@@ -385,6 +385,8 @@ SSL cert keys (size: ${SSL_KEY_SIZE}):
     - ${SSL_KEY_FILE}
 
 EOF
+
+    echo 'export status_generate_ssl_keys="DONE"' >> ${STATUS_FILE}
 }
 
 # Add alias entry in Postfix /etc/postfix/aliases.
